# webinar-demo-bxarm

./: .gitignore  CMakeLists.txt  Dockerfile  cpptest.excludes.lst  cpptest.ide.properties  cpptest.local.MISRA C2012.properties  cpptest.pipeline.MISRA C2012.properties  cpptest.pipeline.properties  reference_report.xml  toolchain-iccarm.cmake
.devcontainer/: devcontainer.json
.github/workflows/: main-quality-gate.yml
429-acad-light-effects/: toolchain-iccarm.cmake
429-acad-light-effects/board/: iar_stm32f429ii_aca.c  iar_stm32f429ii_aca.h
app/: includes.h  iosys.c  main.c  stm32f4xx_conf.h  stm32f4xx_it.c
lib-logic/: bufferOverflow.c  dbutil.c  dbutil.h  divisionByZero.c  fileLeaks.c  integerOverflow.c  parasoft.suppress
